round6/satreachability/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> spec
Rule 1     spec -> statement
Rule 2     spec -> statement spec
Rule 3     statement -> ID EQ NUMBER SEMICOLON
Rule 4     statement -> TYPE ID EQ setexpr SEMICOLON
Rule 5     statement -> SOURCE initlist SEMICOLON
Rule 6     statement -> SOURCEFORMULA boolexpr SEMICOLON
Rule 7     statement -> TARGET boolexpr SEMICOLON
Rule 8     statement -> TRAJECTORYFORMULA boolexpr SEMICOLON
Rule 9     setexpr -> LBRACK tnumexpr COMMA tnumexpr RBRACK
Rule 10    setexpr -> LBRACE stringlist RBRACE
Rule 11    setexpr -> ID
Rule 12    stringlist -> enum
Rule 13    enum -> ID
Rule 14    enum -> NUMBER
Rule 15    stringlist -> enum COMMA stringlist
Rule 16    boolexpr -> boolexpr AND boolexpr
Rule 17    boolexpr -> boolexpr OR boolexpr
Rule 18    boolexpr -> boolexpr IMPL boolexpr
Rule 19    boolexpr -> boolexpr EQVI boolexpr
Rule 20    boolexpr -> NOT boolexpr
Rule 21    boolexpr -> PTRUE
Rule 22    boolexpr -> PFALSE
Rule 23    boolexpr -> EXISTS LPAREN paramlist RPAREN boolexpr
Rule 24    boolexpr -> FORALL LPAREN paramlist RPAREN boolexpr
Rule 25    boolexpr -> ATMOST NUMBER LPAREN boolexprlist RPAREN
Rule 26    boolexpr -> ATLEAST NUMBER LPAREN boolexprlist RPAREN
Rule 27    boolexpr -> EXACTLY NUMBER LPAREN boolexprlist RPAREN
Rule 28    boolexpr -> BETWEEN NUMBER NUMBER LPAREN boolexprlist RPAREN
Rule 29    boolexpr -> ATMOST NUMBER LPAREN paramlist RPAREN boolexpr
Rule 30    boolexpr -> ATLEAST NUMBER LPAREN paramlist RPAREN boolexpr
Rule 31    boolexpr -> EXACTLY NUMBER LPAREN paramlist RPAREN boolexpr
Rule 32    boolexpr -> BETWEEN NUMBER NUMBER LPAREN paramlist RPAREN boolexpr
Rule 33    boolexprlist -> boolexpr
Rule 34    boolexprlist -> boolexpr COMMA boolexprlist
Rule 35    boolexpr -> atom
Rule 36    boolexpr -> atom AT NUMBER
Rule 37    boolexpr -> LPAREN boolexpr RPAREN
Rule 38    boolexpr -> LBRACK numexpr GT numexpr RBRACK
Rule 39    boolexpr -> LBRACK numexpr LT numexpr RBRACK
Rule 40    boolexpr -> LBRACK numexpr GEQ numexpr RBRACK
Rule 41    boolexpr -> LBRACK numexpr LEQ numexpr RBRACK
Rule 42    boolexpr -> LBRACK numexpr EQ numexpr RBRACK
Rule 43    numexpr -> LPAREN numexpr RPAREN
Rule 44    numexpr -> NUMBER
Rule 45    numexpr -> atom
Rule 46    numexpr -> numexpr PLUS numexpr
Rule 47    numexpr -> numexpr MINUS numexpr
Rule 48    numexpr -> numexpr TIMES numexpr
Rule 49    tnumexpr -> LPAREN numexpr RPAREN
Rule 50    tnumexpr -> NUMBER
Rule 51    tnumexpr -> ID
Rule 52    tnumexpr -> tnumexpr PLUS tnumexpr
Rule 53    tnumexpr -> tnumexpr MINUS tnumexpr
Rule 54    tnumexpr -> tnumexpr TIMES tnumexpr
Rule 55    termlist -> term COMMA termlist
Rule 56    termlist -> term
Rule 57    term -> tnumexpr
Rule 58    atom -> ID
Rule 59    atom -> ID LPAREN termlist RPAREN
Rule 60    initlist -> atom
Rule 61    initlist -> atom COMMA initlist
Rule 62    initlist -> atom EQ NUMBER
Rule 63    initlist -> atom EQ NUMBER COMMA initlist
Rule 64    effects -> effect
Rule 65    effects -> effect effects
Rule 66    effect -> atom SEMICOLON
Rule 67    effect -> NOT atom SEMICOLON
Rule 68    effect -> atom ASSIGN numexpr SEMICOLON
Rule 69    effect -> IF boolexpr LBRACE effects RBRACE
Rule 70    effect -> FORALL LPAREN paramlist RPAREN LBRACE effects RBRACE
Rule 71    paramlist -> param
Rule 72    paramlist -> param COMMA paramlist
Rule 73    param -> ID COLON setexpr
Rule 74    statement -> TRANSITION ID LPAREN paramlist RPAREN boolexpr LBRACE effects RBRACE
Rule 75    statement -> TRANSITION ID LPAREN RPAREN boolexpr LBRACE effects RBRACE

Terminals, with rules where they appear

AND                  : 16
ASSIGN               : 68
AT                   : 36
ATLEAST              : 26 30
ATMOST               : 25 29
BETWEEN              : 28 32
COLON                : 73
COMMA                : 9 15 34 55 61 63 72
EQ                   : 3 4 42 62 63
EQVI                 : 19
EXACTLY              : 27 31
EXISTS               : 23
FORALL               : 24 70
GEQ                  : 40
GT                   : 38
ID                   : 3 4 11 13 51 58 59 73 74 75
IF                   : 69
IMPL                 : 18
LBRACE               : 10 69 70 74 75
LBRACK               : 9 38 39 40 41 42
LEQ                  : 41
LPAREN               : 23 24 25 26 27 28 29 30 31 32 37 43 49 59 70 74 75
LT                   : 39
MINUS                : 47 53
NOT                  : 20 67
NUMBER               : 3 14 25 26 27 28 28 29 30 31 32 32 36 44 50 62 63
OR                   : 17
PFALSE               : 22
PLUS                 : 46 52
PTRUE                : 21
RBRACE               : 10 69 70 74 75
RBRACK               : 9 38 39 40 41 42
RPAREN               : 23 24 25 26 27 28 29 30 31 32 37 43 49 59 70 74 75
SEMICOLON            : 3 4 5 6 7 8 66 67 68
SOURCE               : 5
SOURCEFORMULA        : 6
TARGET               : 7
TIMES                : 48 54
TRAJECTORYFORMULA    : 8
TRANSITION           : 74 75
TYPE                 : 4
error                : 

Nonterminals, with rules where they appear

atom                 : 35 36 45 60 61 62 63 66 67 68
boolexpr             : 6 7 8 16 16 17 17 18 18 19 19 20 23 24 29 30 31 32 33 34 37 69 74 75
boolexprlist         : 25 26 27 28 34
effect               : 64 65
effects              : 65 69 70 74 75
enum                 : 12 15
initlist             : 5 61 63
numexpr              : 38 38 39 39 40 40 41 41 42 42 43 46 46 47 47 48 48 49 68
param                : 71 72
paramlist            : 23 24 29 30 31 32 70 72 74
setexpr              : 4 73
spec                 : 2 0
statement            : 1 2
stringlist           : 10 15
term                 : 55 56
termlist             : 55 59
tnumexpr             : 9 9 52 52 53 53 54 54 57

Parsing method: LALR

state 0

    (0) S' -> . spec
    (1) spec -> . statement
    (2) spec -> . statement spec
    (3) statement -> . ID EQ NUMBER SEMICOLON
    (4) statement -> . TYPE ID EQ setexpr SEMICOLON
    (5) statement -> . SOURCE initlist SEMICOLON
    (6) statement -> . SOURCEFORMULA boolexpr SEMICOLON
    (7) statement -> . TARGET boolexpr SEMICOLON
    (8) statement -> . TRAJECTORYFORMULA boolexpr SEMICOLON
    (74) statement -> . TRANSITION ID LPAREN paramlist RPAREN boolexpr LBRACE effects RBRACE
    (75) statement -> . TRANSITION ID LPAREN RPAREN boolexpr LBRACE effects RBRACE

    ID              shift and go to state 3
    TYPE            shift and go to state 4
    SOURCE          shift and go to state 5
    SOURCEFORMULA   shift and go to state 6
    TARGET          shift and go to state 7
    TRAJECTORYFORMULA shift and go to state 8
    TRANSITION      shift and go to state 9

    spec                           shift and go to state 1
    statement                      shift and go to state 2

state 1

    (0) S' -> spec .



state 2

    (1) spec -> statement .
    (2) spec -> statement . spec
    (1) spec -> . statement
    (2) spec -> . statement spec
    (3) statement -> . ID EQ NUMBER SEMICOLON
    (4) statement -> . TYPE ID EQ setexpr SEMICOLON
    (5) statement -> . SOURCE initlist SEMICOLON
    (6) statement -> . SOURCEFORMULA boolexpr SEMICOLON
    (7) statement -> . TARGET boolexpr SEMICOLON
    (8) statement -> . TRAJECTORYFORMULA boolexpr SEMICOLON
    (74) statement -> . TRANSITION ID LPAREN paramlist RPAREN boolexpr LBRACE effects RBRACE
    (75) statement -> . TRANSITION ID LPAREN RPAREN boolexpr LBRACE effects RBRACE

    $end            reduce using rule 1 (spec -> statement .)
    ID              shift and go to state 3
    TYPE            shift and go to state 4
    SOURCE          shift and go to state 5
    SOURCEFORMULA   shift and go to state 6
    TARGET          shift and go to state 7
    TRAJECTORYFORMULA shift and go to state 8
    TRANSITION      shift and go to state 9

    statement                      shift and go to state 2
    spec                           shift and go to state 10

state 3

    (3) statement -> ID . EQ NUMBER SEMICOLON

    EQ              shift and go to state 11


state 4

    (4) statement -> TYPE . ID EQ setexpr SEMICOLON

    ID              shift and go to state 12


state 5

    (5) statement -> SOURCE . initlist SEMICOLON
    (60) initlist -> . atom
    (61) initlist -> . atom COMMA initlist
    (62) initlist -> . atom EQ NUMBER
    (63) initlist -> . atom EQ NUMBER COMMA initlist
    (58) atom -> . ID
    (59) atom -> . ID LPAREN termlist RPAREN

    ID              shift and go to state 15

    initlist                       shift and go to state 13
    atom                           shift and go to state 14

state 6

    (6) statement -> SOURCEFORMULA . boolexpr SEMICOLON
    (16) boolexpr -> . boolexpr AND boolexpr
    (17) boolexpr -> . boolexpr OR boolexpr
    (18) boolexpr -> . boolexpr IMPL boolexpr
    (19) boolexpr -> . boolexpr EQVI boolexpr
    (20) boolexpr -> . NOT boolexpr
    (21) boolexpr -> . PTRUE
    (22) boolexpr -> . PFALSE
    (23) boolexpr -> . EXISTS LPAREN paramlist RPAREN boolexpr
    (24) boolexpr -> . FORALL LPAREN paramlist RPAREN boolexpr
    (25) boolexpr -> . ATMOST NUMBER LPAREN boolexprlist RPAREN
    (26) boolexpr -> . ATLEAST NUMBER LPAREN boolexprlist RPAREN
    (27) boolexpr -> . EXACTLY NUMBER LPAREN boolexprlist RPAREN
    (28) boolexpr -> . BETWEEN NUMBER NUMBER LPAREN boolexprlist RPAREN
    (29) boolexpr -> . ATMOST NUMBER LPAREN paramlist RPAREN boolexpr
    (30) boolexpr -> . ATLEAST NUMBER LPAREN paramlist RPAREN boolexpr
    (31) boolexpr -> . EXACTLY NUMBER LPAREN paramlist RPAREN boolexpr
    (32) boolexpr -> . BETWEEN NUMBER NUMBER LPAREN paramlist RPAREN boolexpr
    (35) boolexpr -> . atom
    (36) boolexpr -> . atom AT NUMBER
    (37) boolexpr -> . LPAREN boolexpr RPAREN
    (38) boolexpr -> . LBRACK numexpr GT numexpr RBRACK
    (39) boolexpr -> . LBRACK numexpr LT numexpr RBRACK
    (40) boolexpr -> . LBRACK numexpr GEQ numexpr RBRACK
    (41) boolexpr -> . LBRACK numexpr LEQ numexpr RBRACK
    (42) boolexpr -> . LBRACK numexpr EQ numexpr RBRACK
    (58) atom -> . ID
    (59) atom -> . ID LPAREN termlist RPAREN

    NOT             shift and go to state 17
    PTRUE           shift and go to state 18
    PFALSE          shift and go to state 19
    EXISTS          shift and go to state 20
    FORALL          shift and go to state 22
    ATMOST          shift and go to state 23
    ATLEAST         shift and go to state 24
    EXACTLY         shift and go to state 25
    BETWEEN         shift and go to state 26
    LPAREN          shift and go to state 21
    LBRACK          shift and go to state 28
    ID              shift and go to state 15

    boolexpr                       shift and go to state 16
    atom                           shift and go to state 27

state 7

    (7) statement -> TARGET . boolexpr SEMICOLON
    (16) boolexpr -> . boolexpr AND boolexpr
    (17) boolexpr -> . boolexpr OR boolexpr
    (18) boolexpr -> . boolexpr IMPL boolexpr
    (19) boolexpr -> . boolexpr EQVI boolexpr
    (20) boolexpr -> . NOT boolexpr
    (21) boolexpr -> . PTRUE
    (22) boolexpr -> . PFALSE
    (23) boolexpr -> . EXISTS LPAREN paramlist RPAREN boolexpr
    (24) boolexpr -> . FORALL LPAREN paramlist RPAREN boolexpr
    (25) boolexpr -> . ATMOST NUMBER LPAREN boolexprlist RPAREN
    (26) boolexpr -> . ATLEAST NUMBER LPAREN boolexprlist RPAREN
    (27) boolexpr -> . EXACTLY NUMBER LPAREN boolexprlist RPAREN
    (28) boolexpr -> . BETWEEN NUMBER NUMBER LPAREN boolexprlist RPAREN
    (29) boolexpr -> . ATMOST NUMBER LPAREN paramlist RPAREN boolexpr
    (30) boolexpr -> . ATLEAST NUMBER LPAREN paramlist RPAREN boolexpr
    (31) boolexpr -> . EXACTLY NUMBER LPAREN paramlist RPAREN boolexpr
    (32) boolexpr -> . BETWEEN NUMBER NUMBER LPAREN paramlist RPAREN boolexpr
    (35) boolexpr -> . atom
    (36) boolexpr -> . atom AT NUMBER
    (37) boolexpr -> . LPAREN boolexpr RPAREN
    (38) boolexpr -> . LBRACK numexpr GT numexpr RBRACK
    (39) boolexpr -> . LBRACK numexpr LT numexpr RBRACK
    (40) boolexpr -> . LBRACK numexpr GEQ numexpr RBRACK
    (41) boolexpr -> . LBRACK numexpr LEQ numexpr RBRACK
    (42) boolexpr -> . LBRACK numexpr EQ numexpr RBRACK
    (58) atom -> . ID
    (59) atom -> . ID LPAREN termlist RPAREN

    NOT             shift and go to state 17
    PTRUE           shift and go to state 18
    PFALSE          shift and go to state 19
    EXISTS          shift and go to state 20
    FORALL          shift and go to state 22
    ATMOST          shift and go to state 23
    ATLEAST         shift and go to state 24
    EXACTLY         shift and go to state 25
    BETWEEN         shift and go to state 26
    LPAREN          shift and go to state 21
    LBRACK          shift and go to state 28
    ID              shift and go to state 15

    boolexpr                       shift and go to state 29
    atom                           shift and go to state 27

state 8

    (8) statement -> TRAJECTORYFORMULA . boolexpr SEMICOLON
    (16) boolexpr -> . boolexpr AND boolexpr
    (17) boolexpr -> . boolexpr OR boolexpr
    (18) boolexpr -> . boolexpr IMPL boolexpr
    (19) boolexpr -> . boolexpr EQVI boolexpr
    (20) boolexpr -> . NOT boolexpr
    (21) boolexpr -> . PTRUE
    (22) boolexpr -> . PFALSE
    (23) boolexpr -> . EXISTS LPAREN paramlist RPAREN boolexpr
    (24) boolexpr -> . FORALL LPAREN paramlist RPAREN boolexpr
    (25) boolexpr -> . ATMOST NUMBER LPAREN boolexprlist RPAREN
    (26) boolexpr -> . ATLEAST NUMBER LPAREN boolexprlist RPAREN
    (27) boolexpr -> . EXACTLY NUMBER LPAREN boolexprlist RPAREN
    (28) boolexpr -> . BETWEEN NUMBER NUMBER LPAREN boolexprlist RPAREN
    (29) boolexpr -> . ATMOST NUMBER LPAREN paramlist RPAREN boolexpr
    (30) boolexpr -> . ATLEAST NUMBER LPAREN paramlist RPAREN boolexpr
    (31) boolexpr -> . EXACTLY NUMBER LPAREN paramlist RPAREN boolexpr
    (32) boolexpr -> . BETWEEN NUMBER NUMBER LPAREN paramlist RPAREN boolexpr
    (35) boolexpr -> . atom
    (36) boolexpr -> . atom AT NUMBER
    (37) boolexpr -> . LPAREN boolexpr RPAREN
    (38) boolexpr -> . LBRACK numexpr GT numexpr RBRACK
    (39) boolexpr -> . LBRACK numexpr LT numexpr RBRACK
    (40) boolexpr -> . LBRACK numexpr GEQ numexpr RBRACK
    (41) boolexpr -> . LBRACK numexpr LEQ numexpr RBRACK
    (42) boolexpr -> . LBRACK numexpr EQ numexpr RBRACK
    (58) atom -> . ID
    (59) atom -> . ID LPAREN termlist RPAREN

    NOT             shift and go to state 17
    PTRUE           shift and go to state 18
    PFALSE          shift and go to state 19
    EXISTS          shift and go to state 20
    FORALL          shift and go to state 22
    ATMOST          shift and go to state 23
    ATLEAST         shift and go to state 24
    EXACTLY         shift and go to state 25
    BETWEEN         shift and go to state 26
    LPAREN          shift and go to state 21
    LBRACK          shift and go to state 28
    ID              shift and go to state 15

    boolexpr                       shift and go to state 30
    atom                           shift and go to state 27

state 9

    (74) statement -> TRANSITION . ID LPAREN paramlist RPAREN boolexpr LBRACE effects RBRACE
    (75) statement -> TRANSITION . ID LPAREN RPAREN boolexpr LBRACE effects RBRACE

    ID              shift and go to state 31


state 10

    (2) spec -> statement spec .

    $end            reduce using rule 2 (spec -> statement spec .)


state 11

    (3) statement -> ID EQ . NUMBER SEMICOLON

    NUMBER          shift and go to state 32


state 12

    (4) statement -> TYPE ID . EQ setexpr SEMICOLON

    EQ              shift and go to state 33


state 13

    (5) statement -> SOURCE initlist . SEMICOLON

    SEMICOLON       shift and go to state 34


state 14

    (60) initlist -> atom .
    (61) initlist -> atom . COMMA initlist
    (62) initlist -> atom . EQ NUMBER
    (63) initlist -> atom . EQ NUMBER COMMA initlist

    SEMICOLON       reduce using rule 60 (initlist -> atom .)
    COMMA           shift and go to state 35
    EQ              shift and go to state 36


state 15

    (58) atom -> ID .
    (59) atom -> ID . LPAREN termlist RPAREN

    COMMA           reduce using rule 58 (atom -> ID .)
    EQ              reduce using rule 58 (atom -> ID .)
    SEMICOLON       reduce using rule 58 (atom -> ID .)
    AT              reduce using rule 58 (atom -> ID .)
    AND             reduce using rule 58 (atom -> ID .)
    OR              reduce using rule 58 (atom -> ID .)
    IMPL            reduce using rule 58 (atom -> ID .)
    EQVI            reduce using rule 58 (atom -> ID .)
    RPAREN          reduce using rule 58 (atom -> ID .)
    LBRACE          reduce using rule 58 (atom -> ID .)
    GT              reduce using rule 58 (atom -> ID .)
    LT              reduce using rule 58 (atom -> ID .)
    GEQ             reduce using rule 58 (atom -> ID .)
    LEQ             reduce using rule 58 (atom -> ID .)
    PLUS            reduce using rule 58 (atom -> ID .)
    MINUS           reduce using rule 58 (atom -> ID .)
    TIMES           reduce using rule 58 (atom -> ID .)
    RBRACK          reduce using rule 58 (atom -> ID .)
    ASSIGN          reduce using rule 58 (atom -> ID .)
    LPAREN          shift and go to state 37


state 16

    (6) statement -> SOURCEFORMULA boolexpr . SEMICOLON
    (16) boolexpr -> boolexpr . AND boolexpr
    (17) boolexpr -> boolexpr . OR boolexpr
    (18) boolexpr -> boolexpr . IMPL boolexpr
    (19) boolexpr -> boolexpr . EQVI boolexpr

    SEMICOLON       shift and go to state 38
    AND             shift and go to state 39
    OR              shift and go to state 40
    IMPL            shift and go to state 41
    EQVI            shift and go to state 42


state 17

    (20) boolexpr -> NOT . boolexpr
    (16) boolexpr -> . boolexpr AND boolexpr
    (17) boolexpr -> . boolexpr OR boolexpr
    (18) boolexpr -> . boolexpr IMPL boolexpr
    (19) boolexpr -> . boolexpr EQVI boolexpr
    (20) boolexpr -> . NOT boolexpr
    (21) boolexpr -> . PTRUE
    (22) boolexpr -> . PFALSE
    (23) boolexpr -> . EXISTS LPAREN paramlist RPAREN boolexpr
    (24) boolexpr -> . FORALL LPAREN paramlist RPAREN boolexpr
    (25) boolexpr -> . ATMOST NUMBER LPAREN boolexprlist RPAREN
    (26) boolexpr -> . ATLEAST NUMBER LPAREN boolexprlist RPAREN
    (27) boolexpr -> . EXACTLY NUMBER LPAREN boolexprlist RPAREN
    (28) boolexpr -> . BETWEEN NUMBER NUMBER LPAREN boolexprlist RPAREN
    (29) boolexpr -> . ATMOST NUMBER LPAREN paramlist RPAREN boolexpr
    (30) boolexpr -> . ATLEAST NUMBER LPAREN paramlist RPAREN boolexpr
    (31) boolexpr -> . EXACTLY NUMBER LPAREN paramlist RPAREN boolexpr
    (32) boolexpr -> . BETWEEN NUMBER NUMBER LPAREN paramlist RPAREN boolexpr
    (35) boolexpr -> . atom
    (36) boolexpr -> . atom AT NUMBER
    (37) boolexpr -> . LPAREN boolexpr RPAREN
    (38) boolexpr -> . LBRACK numexpr GT numexpr RBRACK
    (39) boolexpr -> . LBRACK numexpr LT numexpr RBRACK
    (40) boolexpr -> . LBRACK numexpr GEQ numexpr RBRACK
    (41) boolexpr -> . LBRACK numexpr LEQ numexpr RBRACK
    (42) boolexpr -> . LBRACK numexpr EQ numexpr RBRACK
    (58) atom -> . ID
    (59) atom -> . ID LPAREN termlist RPAREN

    NOT             shift and go to state 17
    PTRUE           shift and go to state 18
    PFALSE          shift and go to state 19
    EXISTS          shift and go to state 20
    FORALL          shift and go to state 22
    ATMOST          shift and go to state 23
    ATLEAST         shift and go to state 24
    EXACTLY         shift and go to state 25
    BETWEEN         shift and go to state 26
    LPAREN          shift and go to state 21
    LBRACK          shift and go to state 28
    ID              shift and go to state 15

    boolexpr                       shift and go to state 43
    atom                           shift and go to state 27

state 18

    (21) boolexpr -> PTRUE .

    SEMICOLON       reduce using rule 21 (boolexpr -> PTRUE .)
    AND             reduce using rule 21 (boolexpr -> PTRUE .)
    OR              reduce using rule 21 (boolexpr -> PTRUE .)
    IMPL            reduce using rule 21 (boolexpr -> PTRUE .)
    EQVI            reduce using rule 21 (boolexpr -> PTRUE .)
    RPAREN          reduce using rule 21 (boolexpr -> PTRUE .)
    COMMA           reduce using rule 21 (boolexpr -> PTRUE .)
    LBRACE          reduce using rule 21 (boolexpr -> PTRUE .)


state 19

    (22) boolexpr -> PFALSE .

    SEMICOLON       reduce using rule 22 (boolexpr -> PFALSE .)
    AND             reduce using rule 22 (boolexpr -> PFALSE .)
    OR              reduce using rule 22 (boolexpr -> PFALSE .)
    IMPL            reduce using rule 22 (boolexpr -> PFALSE .)
    EQVI            reduce using rule 22 (boolexpr -> PFALSE .)
    RPAREN          reduce using rule 22 (boolexpr -> PFALSE .)
    COMMA           reduce using rule 22 (boolexpr -> PFALSE .)
    LBRACE          reduce using rule 22 (boolexpr -> PFALSE .)


state 20

    (23) boolexpr -> EXISTS . LPAREN paramlist RPAREN boolexpr

    LPAREN          shift and go to state 44


state 21

    (37) boolexpr -> LPAREN . boolexpr RPAREN
    (16) boolexpr -> . boolexpr AND boolexpr
    (17) boolexpr -> . boolexpr OR boolexpr
    (18) boolexpr -> . boolexpr IMPL boolexpr
    (19) boolexpr -> . boolexpr EQVI boolexpr
    (20) boolexpr -> . NOT boolexpr
    (21) boolexpr -> . PTRUE
    (22) boolexpr -> . PFALSE
    (23) boolexpr -> . EXISTS LPAREN paramlist RPAREN boolexpr
    (24) boolexpr -> . FORALL LPAREN paramlist RPAREN boolexpr
    (25) boolexpr -> . ATMOST NUMBER LPAREN boolexprlist RPAREN
    (26) boolexpr -> . ATLEAST NUMBER LPAREN boolexprlist RPAREN
    (27) boolexpr -> . EXACTLY NUMBER LPAREN boolexprlist RPAREN
    (28) boolexpr -> . BETWEEN NUMBER NUMBER LPAREN boolexprlist RPAREN
    (29) boolexpr -> . ATMOST NUMBER LPAREN paramlist RPAREN boolexpr
    (30) boolexpr -> . ATLEAST NUMBER LPAREN paramlist RPAREN boolexpr
    (31) boolexpr -> . EXACTLY NUMBER LPAREN paramlist RPAREN boolexpr
    (32) boolexpr -> . BETWEEN NUMBER NUMBER LPAREN paramlist RPAREN boolexpr
    (35) boolexpr -> . atom
    (36) boolexpr -> . atom AT NUMBER
    (37) boolexpr -> . LPAREN boolexpr RPAREN
    (38) boolexpr -> . LBRACK numexpr GT numexpr RBRACK
    (39) boolexpr -> . LBRACK numexpr LT numexpr RBRACK
    (40) boolexpr -> . LBRACK numexpr GEQ numexpr RBRACK
    (41) boolexpr -> . LBRACK numexpr LEQ numexpr RBRACK
    (42) boolexpr -> . LBRACK numexpr EQ numexpr RBRACK
    (58) atom -> . ID
    (59) atom -> . ID LPAREN termlist RPAREN

    NOT             shift and go to state 17
    PTRUE           shift and go to state 18
    PFALSE          shift and go to state 19
    EXISTS          shift and go to state 20
    FORALL          shift and go to state 22
    ATMOST          shift and go to state 23
    ATLEAST         shift and go to state 24
    EXACTLY         shift and go to state 25
    BETWEEN         shift and go to state 26
    LPAREN          shift and go to state 21
    LBRACK          shift and go to state 28
    ID              shift and go to state 15

    boolexpr                       shift and go to state 45
    atom                           shift and go to state 27

state 22

    (24) boolexpr -> FORALL . LPAREN paramlist RPAREN boolexpr

    LPAREN          shift and go to state 46


state 23

    (25) boolexpr -> ATMOST . NUMBER LPAREN boolexprlist RPAREN
    (29) boolexpr -> ATMOST . NUMBER LPAREN paramlist RPAREN boolexpr

    NUMBER          shift and go to state 47


state 24

    (26) boolexpr -> ATLEAST . NUMBER LPAREN boolexprlist RPAREN
    (30) boolexpr -> ATLEAST . NUMBER LPAREN paramlist RPAREN boolexpr

    NUMBER          shift and go to state 48


state 25

    (27) boolexpr -> EXACTLY . NUMBER LPAREN boolexprlist RPAREN
    (31) boolexpr -> EXACTLY . NUMBER LPAREN paramlist RPAREN boolexpr

    NUMBER          shift and go to state 49


state 26

    (28) boolexpr -> BETWEEN . NUMBER NUMBER LPAREN boolexprlist RPAREN
    (32) boolexpr -> BETWEEN . NUMBER NUMBER LPAREN paramlist RPAREN boolexpr

    NUMBER          shift and go to state 50


state 27

    (35) boolexpr -> atom .
    (36) boolexpr -> atom . AT NUMBER

    SEMICOLON       reduce using rule 35 (boolexpr -> atom .)
    AND             reduce using rule 35 (boolexpr -> atom .)
    OR              reduce using rule 35 (boolexpr -> atom .)
    IMPL            reduce using rule 35 (boolexpr -> atom .)
    EQVI            reduce using rule 35 (boolexpr -> atom .)
    RPAREN          reduce using rule 35 (boolexpr -> atom .)
    COMMA           reduce using rule 35 (boolexpr -> atom .)
    LBRACE          reduce using rule 35 (boolexpr -> atom .)
    AT              shift and go to state 51


state 28

    (38) boolexpr -> LBRACK . numexpr GT numexpr RBRACK
    (39) boolexpr -> LBRACK . numexpr LT numexpr RBRACK
    (40) boolexpr -> LBRACK . numexpr GEQ numexpr RBRACK
    (41) boolexpr -> LBRACK . numexpr LEQ numexpr RBRACK
    (42) boolexpr -> LBRACK . numexpr EQ numexpr RBRACK
    (43) numexpr -> . LPAREN numexpr RPAREN
    (44) numexpr -> . NUMBER
    (45) numexpr -> . atom
    (46) numexpr -> . numexpr PLUS numexpr
    (47) numexpr -> . numexpr MINUS numexpr
    (48) numexpr -> . numexpr TIMES numexpr
    (58) atom -> . ID
    (59) atom -> . ID LPAREN termlist RPAREN

    LPAREN          shift and go to state 53
    NUMBER          shift and go to state 54
    ID              shift and go to state 15

    numexpr                        shift and go to state 52
    atom                           shift and go to state 55

state 29

    (7) statement -> TARGET boolexpr . SEMICOLON
    (16) boolexpr -> boolexpr . AND boolexpr
    (17) boolexpr -> boolexpr . OR boolexpr
    (18) boolexpr -> boolexpr . IMPL boolexpr
    (19) boolexpr -> boolexpr . EQVI boolexpr

    SEMICOLON       shift and go to state 56
    AND             shift and go to state 39
    OR              shift and go to state 40
    IMPL            shift and go to state 41
    EQVI            shift and go to state 42


state 30

    (8) statement -> TRAJECTORYFORMULA boolexpr . SEMICOLON
    (16) boolexpr -> boolexpr . AND boolexpr
    (17) boolexpr -> boolexpr . OR boolexpr
    (18) boolexpr -> boolexpr . IMPL boolexpr
    (19) boolexpr -> boolexpr . EQVI boolexpr

    SEMICOLON       shift and go to state 57
    AND             shift and go to state 39
    OR              shift and go to state 40
    IMPL            shift and go to state 41
    EQVI            shift and go to state 42


state 31

    (74) statement -> TRANSITION ID . LPAREN paramlist RPAREN boolexpr LBRACE effects RBRACE
    (75) statement -> TRANSITION ID . LPAREN RPAREN boolexpr LBRACE effects RBRACE

    LPAREN          shift and go to state 58


state 32

    (3) statement -> ID EQ NUMBER . SEMICOLON

    SEMICOLON       shift and go to state 59


state 33

    (4) statement -> TYPE ID EQ . setexpr SEMICOLON
    (9) setexpr -> . LBRACK tnumexpr COMMA tnumexpr RBRACK
    (10) setexpr -> . LBRACE stringlist RBRACE
    (11) setexpr -> . ID

    LBRACK          shift and go to state 62
    LBRACE          shift and go to state 63
    ID              shift and go to state 60

    setexpr                        shift and go to state 61

state 34

    (5) statement -> SOURCE initlist SEMICOLON .

    ID              reduce using rule 5 (statement -> SOURCE initlist SEMICOLON .)
    TYPE            reduce using rule 5 (statement -> SOURCE initlist SEMICOLON .)
    SOURCE          reduce using rule 5 (statement -> SOURCE initlist SEMICOLON .)
    SOURCEFORMULA   reduce using rule 5 (statement -> SOURCE initlist SEMICOLON .)
    TARGET          reduce using rule 5 (statement -> SOURCE initlist SEMICOLON .)
    TRAJECTORYFORMULA reduce using rule 5 (statement -> SOURCE initlist SEMICOLON .)
    TRANSITION      reduce using rule 5 (statement -> SOURCE initlist SEMICOLON .)
    $end            reduce using rule 5 (statement -> SOURCE initlist SEMICOLON .)


state 35

    (61) initlist -> atom COMMA . initlist
    (60) initlist -> . atom
    (61) initlist -> . atom COMMA initlist
    (62) initlist -> . atom EQ NUMBER
    (63) initlist -> . atom EQ NUMBER COMMA initlist
    (58) atom -> . ID
    (59) atom -> . ID LPAREN termlist RPAREN

    ID              shift and go to state 15

    atom                           shift and go to state 14
    initlist                       shift and go to state 64

state 36

    (62) initlist -> atom EQ . NUMBER
    (63) initlist -> atom EQ . NUMBER COMMA initlist

    NUMBER          shift and go to state 65


state 37

    (59) atom -> ID LPAREN . termlist RPAREN
    (55) termlist -> . term COMMA termlist
    (56) termlist -> . term
    (57) term -> . tnumexpr
    (49) tnumexpr -> . LPAREN numexpr RPAREN
    (50) tnumexpr -> . NUMBER
    (51) tnumexpr -> . ID
    (52) tnumexpr -> . tnumexpr PLUS tnumexpr
    (53) tnumexpr -> . tnumexpr MINUS tnumexpr
    (54) tnumexpr -> . tnumexpr TIMES tnumexpr

    LPAREN          shift and go to state 67
    NUMBER          shift and go to state 71
    ID              shift and go to state 66

    termlist                       shift and go to state 68
    term                           shift and go to state 69
    tnumexpr                       shift and go to state 70

state 38

    (6) statement -> SOURCEFORMULA boolexpr SEMICOLON .
